--- a/tongol-albert-full_responsive_multi_page_website_design/style.css
+++ b/tongol-albert-full_responsive_multi_page_website_design/style.css
@@ -80,7 +80,7 @@
         display: inline-block;
         text-decoration: none;
         color: #fff;
-        border: 1px solid #fff;
+        border: 1px solid rgb(255, 104, 104);
         padding: 12px 34px;
         font-size: 15px;
         background: transparent;
@@ -114,7 +114,7 @@
         }
 
         .nav-links{
-            position: absolute;
+            position: fixed;
             background: #530c0c;
             height: 100vh;
             width: 200px;
@@ -509,4 +509,49 @@
     .sub-header h1{
         font-size: 24px;
     }
+}
+/*-----------Contact us------------*/
+.location{
+    width: 80%;
+    margin: auto;
+    padding: 80px 0;
+}
+.location iframe{
+    width: 100%;
+}
+.contact-us{
+    width: 80%;
+    margin: auto;
+}
+.contact-col{
+    flex-basis: 48%;
+    margin-bottom: 30px;
+}
+.contact-col div{
+    display: flex;
+    align-items: center;
+    margin-bottom: 40px;
+}
+.contact-col div .fa{
+    font-size: 28px;
+    color: #c52015;
+    margin: 10px;
+    margin-right: 30px;
+}
+.contact-col div p{
+    padding: 0;
+}
+.contact-col div h5{
+    font-size: 20px;
+    margin-bottom: 5px 0;
+    color: #555;
+    font-weight: 400;
+}
+.contact-col input, .contact-col textarea{
+    width: 100%;
+    padding: 15px;
+    margin-bottom: 17px;
+    outline: none;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
 }
