--- a/bontea/style.css
+++ b/bontea/style.css
@@ -1,6 +1,110 @@
-body{
-    background: #fbe0d9;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box
+}
 
+body{
+    background: #d4ffea;
+}
+
+
+
+footer{
+    position: absolute;
+    bottom:0;
+    left:0;
+    right:0;
+    background:#feffa3;
+    height:auto;
+    width: 100vw;
+    font-family: "Open Sans";
+    padding-top: 3px;
+    color:#020202;
+}
+.footer-content{
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+}
+.footer-content h3{
+    font-size: 1.8rem;
+    font-weight: 400;
+    text-transform: capitalize;
+    line-height: 3rem;
+}
+.footer-content p{
+    max-width:500px;
+    margin: 10px auto;
+    line-height: 5px;
+    font-size: 14px;
+}
+.socials{
+    list-style: none;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    margin:0;
+}
+.socials li{
+    margin: 0 10px;
+}
+.social a{
+    text-decoration: none;
+    color:#020202;
+}
+.social a i{
+    font-size: 1.1rem;
+    transition: color .4s ease;
+}
+.social a:hover i{
+    color: #ffd4e5;
+}
+.footer-bottom{
+    background:#ffd4e5;
+    width: 100vw;
+    padding: 20px 0 ;
+    text-align: center;
+}
+.footer-bottom p{
+    font-size: 14px;
+    word-spacing: 2px;
+    text-transform: capitalize;
+}
+.footer-bottom span{
+    text-transform: uppercase;
+    opacity: .4;
+    font-weight: 200;
+    
+}
+.box{
+    background-color: #dbdcff;
+    width: 400px;
+    height: 320px;
+    border-radius: 100px;
+    text-align: center;
+    position: absolute;
+    top: 120px;
+    left: 425px;
+    
+
+
+
+}
+.logo{
+    background-image: url(img/logo.png);
+    background-size: contain;
+    background-position: center;   
+    z-index: 99999;
+    width: 100px;
+    height: 100px;
+    position: fixed;
+    top: 550px;
+    left: 1155px;
+                      
+    
 }
 /* title image */
 .title{ 
@@ -11,17 +115,35 @@ body{
     height: 300px;
     position: fixed;
     bottom: 400px;
-    left: 455px;
+    
+}
+.design{
+    background-image: url(img/design.png);
+    width: 100vw;
+    height: 600px;
+    position:fixed;
+    top:125px;
+
 }
 
-.logo{
-    background-image: url(img/logo.png);
-    background-size: contain;
-    background-position: center;   
-    width: 100px;
-    height: 100px;
-    position: fixed;
-    top: 550px;
-    left: 1150px;
+.nxtbutt{
+    background-image: url(img/nxt.png);
+    width: 200px;
+}
+
+.font {
+    font-family: 'Caveat', cursive;
+    color: white;
+}
+.font h1{
+    font-family: 'Caveat', cursive;
+    color: white;
+    font-weight: 300px;
+    
+}
+.font h2{
+    font-family: 'Caveat', cursive;
+    color: white;
+    font-weight: 600px;
     
 }
