--- a/tongol-albert-full_responsive_multi_page_website_design/style.css
+++ b/tongol-albert-full_responsive_multi_page_website_design/style.css
@@ -1,9 +1,8 @@
 *{
     margin: 0; 
     padding: 0;
-    font-family: 'Merriweather', serif;
+    font-family: 'Poppins', serif;
 }
-
 .header{
     min-height: 100vh;
     width: 100%;
@@ -12,36 +11,30 @@
     background-size: cover;
     position: relative;
     }
-
     nav{
         display: flex;
         padding: 2% 6%;
         justify-content: space-between;
         align-items:center;
     }
-
     nav img{
         width: 150px;
     }
-
     .nav-links{
         flex: 1;
         text-align:right;
     }
-
     .nav-links ul li{
         list-style: none;
         display: inline-block;
         padding: 8px 12px;
         position: relative;
     }
-
     .nav-links ul li a{
         color: #fff;
         text-decoration: none;
         font-size: 17px;
     }
-
     .nav-links ul li::after{
         content: '';
         width: 0%;
@@ -51,11 +44,9 @@
         margin: auto;
         transition: 1s;
     }
-
     .nav-links ul li:hover::after{
         width: 100%;
     }
-
     .text-box{
         width: 100%;
         color: #fff;
@@ -65,17 +56,14 @@
         transform: translate(-50%, -50%);
         text-align: center;
     }
-
     .text-box h1{
         font-size: 55px;
-    }
-    
+    }    
     .text-box p{
         margin: 10px 0 40px;
         font-size: 25px;
         color: #fff;
     }
-
     .hero-btn{
         display: inline-block;
         text-decoration: none;
@@ -87,32 +75,26 @@
         position: relative;
         cursor: pointer;
     }
-
     .hero-btn:hover{
         border: 1px solid #8b1911;
         background: #8b1911;
         transition: 1s;
     }
-
     nav .fa{
         display: none;
     }
-
-    @media(max-width: 700px){
+    @media(max-width: 800px){
         .text-box h1{
             font-size: 30px;
         }
-
         .text-box p{
             margin: 10px 0 40px;
             font-size: 12px;
             color: #fff;
         }
-
         .nav-links ul li{
             display: block;
         }
-
         .nav-links{
             position: fixed;
             background: #530c0c;
@@ -124,7 +106,6 @@
             z-index: 2;
             transition: 1s;
         }
-
         nav .fa{
             display: block;
             color: #fff;
@@ -133,18 +114,14 @@
             cursor: pointer;
             text-align: left;
         }
-
         .nav-links ul{
             padding: 10px;
         }
-
         .nav-links ul li:hover::after{
             width: 0%;
         }
     }
-
     /*------- course --------*/
-
     .course{
         width: 80%;
         margin: auto;
@@ -162,7 +139,6 @@
         line-height: 22px;
         padding: 10px;
     }
-
     .row{
         margin-top: 5%;
         display: flex;
@@ -191,7 +167,6 @@
         }
     }
     /*-----campus-----*/
-
     .campus{
         width: 80%;
         margin: auto;
@@ -238,9 +213,7 @@
         bottom: 49%;
         opacity: 1;
     }
-
     /*---------facilities----------*/
-
     .facilities{
         width: 80%;
         margin: auto;
@@ -264,8 +237,7 @@
         margin-top: 16px;
         margin-bottom: 15px;
         text-align: left;
-    }
-        
+    }      
     /*---------testimonials--------*/
     .testimonials{
         width:80%;
@@ -309,10 +281,8 @@
             margin-left: 0;
             margin-right: 15px;
         }
-    }
-    
+    }  
     /*--------------call to action----------*/
-
     .cta{
         margin: 100px auto;
         width: 80%;
@@ -554,4 +524,113 @@
     outline: none;
     border: 1px solid #ccc;
     box-sizing: border-box;
+}
+/*---------login----------*/
+.login{
+    font-family: 'Poppins', sans-serif;
+    margin:0;
+    padding:0;
+    box-sizing: border-box;
+    outline: none;
+    border: none;
+    text-decoration: none;
+}
+.container{
+    min-height: 25vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+    padding-bottom: 60px;
+}
+.container .content{
+    text-align: center;
+}
+.container .content h3{
+    font-size: 30px;
+    color: #333;
+}
+.container .content h3 span{
+    background: crimson;
+    color: #fff;
+    border-radius: 5px;
+    padding: 0 15px;
+}
+.container .content h1{
+    font-size: 50px;
+    color: #333;
+}
+.container .content h1{
+    color: #771515;
+}
+.container .content p{
+    font-size: 25px;
+    margin-bottom: 20px;
+}
+.container .content .btn{
+    display: inline-block;
+    padding: 10px 30px;
+    font-size: 20px;
+    background: #333;
+    color: #fff;
+    margin: 0 5px;
+    text-decoration: none; 
+}
+.container .content .btn:hover{
+    background: #771515;
+}
+/*---------register----------*/
+
+.form-container{
+    min-height: 25vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+    padding-bottom: 60px;
+    background: #eee;
+}
+.form-container form{
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 5px 10px rgba(0,0,0,0.1);
+    background: #fff;
+    text-align: center;
+    width: 500px;
+}
+.form-container form h3{
+    font-size: 30px;
+    text-transform: uppercase;
+    margin-bottom: 10px;
+    color: #771515;
+}
+.form-container form input, .form-container form select{
+    width: 100%;
+    padding: 10px 10px;
+    font-size: 17px;
+    margin: 8px 0;
+    background: #eee;
+    border-radius: 5px;
+}
+.form-container form select option{
+    background: #fff;
+}
+.form-container form .form-btn{
+    background:#fbd0d9;
+    color: #771515;
+    text-transform: capitalize;
+    font-size: 20px;
+    cursor: pointer;
+}
+.form-container form .form-btn:hover{
+    background: #771515;
+    color: #fff;
+}
+.form-container form p{
+    margin-top: 10px;
+    font-size: 20px;
+    color: #333;
+}
+.form-container form p a{
+    color: #771515;
 }
