--- a/tongol-albert-full_responsive_multi_page_website_design/university/style.css
+++ b/tongol-albert-full_responsive_multi_page_website_design/university/style.css
@@ -1,7 +1,7 @@
 *{
     margin: 0; 
     padding: 0;
-    font-family: 'Poppins', serif;
+    font-family: 'Merryweather', san-serif;
 }
 .header{
     min-height: 100vh;
@@ -309,7 +309,7 @@
 .footer{
     width: 100%;
     text-align: center;
-    padding: 30px 0;
+    padding: 100px 0;
 }
 .footer h4{
     margin-bottom: 5px;
@@ -368,6 +368,7 @@
     margin-top: 10px;
     margin-bottom: 15px;
     text-align: justify;
+    padding-bottom: 400px;
 }
 .red-btn{
     background: transparent;
@@ -605,7 +606,7 @@
     color: #771515;
 }
 .form-container form input, .form-container form select{
-    width: 100%;
+    width: 95%;
     padding: 10px 10px;
     font-size: 17px;
     margin: 8px 0;
