--- a/tongol-a/university/style.css
+++ b/tongol-a/university/style.css
@@ -132,10 +132,27 @@
     }
     p{
         color: #777;
-        font-size: 14px;
+        font-size: 16px;
         font-weight: 300;
         line-height: 22px;
         padding: 10px;
+        padding-bottom: 5px;
+    }
+    .course p{
+        color: #777;
+        font-size: 16px;
+        font-weight: 300;
+        line-height: 22px;
+        padding: 10px;
+        text-align: justify;
+    }
+    .course .index p{
+        color: #777;
+        font-size: 16px;
+        font-weight: 300;
+        line-height: 22px;
+        padding: 10px;
+        text-align: center;
     }
     .row{
         margin-top: 5%;
@@ -212,6 +229,42 @@
         bottom: 49%;
         opacity: 1;
     }
+    /*--------course2---------*/
+    .course2{
+        width: 80%;
+        margin: auto;
+        text-align: center;
+        padding-top: 50px;
+    }
+    .course2-col{
+        flex-basis: 31%;
+        border-radius: 20px;
+        background: #fff3f3;  
+        margin-bottom: 10px;
+        padding: 20px 12px;
+        box-sizing: border-box;
+        transition: 0.5s;
+    }
+    .course2-col img{
+        width: 20%;
+    }
+    .course2-col h3{
+        margin-top: 16px;
+        margin-bottom: 15px;
+        text-align: center;
+    }
+    .course2-col p{
+        padding: 0;
+        text-align: center;
+    }
+    .course2-col:hover{
+        box-shadow: 0 0 20px 0px rgba(0,0,0,0.2);
+    }
+    @media(max-width: 800px){
+        .course-row{
+            flex-direction: column;
+        }
+    }
     /*---------facilities----------*/
     .facilities{
         width: 80%;
@@ -222,8 +275,13 @@
     .facilities-col{
         flex-basis: 31%;
         border-radius: 10px;
-        margin-bottom: 5%;
-        text-align: left;
+        background: #fff3f3;
+        margin-right: 10px;
+        margin-bottom: 10px;
+        padding: 20px 12px;
+        box-sizing: border-box;
+        text-align: justify;
+        transition: 0.5s;
     }
     .facilities-col img{
         width: 100%;
@@ -231,11 +289,20 @@
     }
     .facilities-col p{
         padding: 0;
+        text-align: justify;
     }
     .facilities-col h3{
         margin-top: 16px;
         margin-bottom: 15px;
         text-align: left;
+    }
+    .facilities-col:hover{
+        box-shadow: 0 0 20px 0px rgba(0,0,0,0.2);
+    }
+    @media(max-width: 800px){
+        .course-row{
+            flex-direction: column;
+        }
     }      
     /*---------testimonials--------*/
     .testimonials{
@@ -418,7 +485,6 @@
 .news-left h2{
     color: #222;
     font-weight: 600;
-    margin: 30px 0;
     padding-left: 12px;
 }
 .news-left h4{
